--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -92,7 +92,7 @@
   </div>
   <div class="camera-button">
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button>
+      <ion-fab-button (click)="Scan()">
         <ion-icon name="camera"></ion-icon>
       </ion-fab-button>
     </ion-fab>
