--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -28,7 +28,7 @@
         [attr.tabindex]="0"
       >
         <ion-icon name="information-circle-outline" slot="start"></ion-icon>
-        <ion-label>Acerca de</ion-label
+        <ion-label>Acerca de</ion-label>
       </ion-item>
       <ion-item
         button
@@ -62,23 +62,37 @@
 
   <div class="centered-container">
     <ion-label>Escribe un mensaje</ion-label>
-    <ion-textarea placeholder="Escribe aquí tu justificación..." [(ngModel)]="mensaje"></ion-textarea>
+    <ion-textarea
+      placeholder="Escribe aquí tu justificación..."
+      [(ngModel)]="mensaje"
+    ></ion-textarea>
   </div>
 
-  <div style="display: flex; justify-content: center; padding: 16px;">
-    <ion-button color="primary" fill="outline" expand="block" (click)="subirDocumento()" style="max-width: 90%;">
+  <div style="display: flex; justify-content: center; padding: 16px">
+    <ion-button
+      color="primary"
+      fill="outline"
+      expand="block"
+      (click)="subirDocumento()"
+      style="max-width: 90%"
+    >
       <ion-icon slot="start" name="document-text-outline"></ion-icon>
       Subir Documento
     </ion-button>
   </div>
 
-  <div style="display: flex; justify-content: center; padding: 16px;">
-    <ion-button expand="block" color="primary" (click)="enviar()" style="width: 90%;">
+  <div style="display: flex; justify-content: center; padding: 16px">
+    <ion-button expand="block" color="primary" style="width: 90%">
       Enviar
     </ion-button>
   </div>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="margin-bottom: 16px; margin-right: 16px;">
+  <ion-fab
+    vertical="bottom"
+    horizontal="end"
+    slot="fixed"
+    style="margin-bottom: 16px; margin-right: 16px"
+  >
     <ion-fab-button (click)="home()">
       <ion-icon name="home-outline"></ion-icon>
     </ion-fab-button>
