--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -28,6 +28,9 @@
     <ion-list-header>
       <ion-label>Fechas de Ausencias</ion-label>
     </ion-list-header>
+    <ion-item *ngIf="ausencias.length === 0">
+      <ion-label color="medium">No tienes inasistencias</ion-label>
+    </ion-item>
     <ion-item *ngFor="let ausencia of ausencias">
       <ion-label>
         <h2>{{ ausencia.fecha }}</h2>
