--- a/src/app/pages/justificara/justificara.page.html
+++ b/src/app/pages/justificara/justificara.page.html
@@ -7,6 +7,59 @@
 </ion-header>
 
 <ion-content id="main-content" [fullscreen]="true">
+  <div *ngIf="isLoading">
+    <ion-spinner name="crescent"></ion-spinner>
+    <p>Cargando las ausencias...</p>
+  </div>
+
+  <div *ngIf="!isLoading">
+    <div *ngIf="arq && arq.length > 0">
+      <h2>Arquitectura de Software</h2>
+      <ion-card *ngFor="let fecha of arq">
+        <ion-card-header>
+          <ion-card-title>Fecha Ausente</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p>Fecha: {{ fecha }}</p>
+        </ion-card-content>
+      </ion-card>
+    </div>
+
+    <div *ngIf="cal && cal.length > 0">
+      <h2>Calidad de Software</h2>
+      <ion-card *ngFor="let fecha of cal">
+        <ion-card-header>
+          <ion-card-title>Fecha Ausente</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p>Fecha: {{ fecha }}</p>
+        </ion-card-content>
+      </ion-card>
+    </div>
+
+    <div *ngIf="apl && apl.length > 0">
+      <h2>Programación de Aplicaciones Móviles</h2>
+      <ion-card *ngFor="let fecha of apl">
+        <ion-card-header>
+          <ion-card-title>Fecha Ausente</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p>Fecha: {{ fecha }}</p>
+        </ion-card-content>
+      </ion-card>
+    </div>
+  </div>
+
+  <ng-template #noData>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>No hay fechas de ausencias</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>No hay registros de ausencias para esta asignatura.</p>
+      </ion-card-content>
+    </ion-card>
+  </ng-template>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Justificar</ion-title>
@@ -45,7 +98,12 @@
     </ion-button>
   </div>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" style="margin-bottom: 16px; margin-right: 16px">
+  <ion-fab
+    vertical="bottom"
+    horizontal="end"
+    slot="fixed"
+    style="margin-bottom: 16px; margin-right: 16px"
+  >
     <ion-fab-button (click)="home()">
       <ion-icon name="home-outline"></ion-icon>
     </ion-fab-button>
