--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -13,7 +13,7 @@
       </ion-item>
       <ion-item button (click)="justificarAsistencia()" [attr.tabindex]="0">
         <ion-icon name="document-text-outline" slot="start"></ion-icon>
-        <ion-label>Justificar Asistencia</ion-label>
+        <ion-label>Mis Inasistencias</ion-label>
       </ion-item>
       <ion-item button (click)="cerrarSesion()" [attr.tabindex]="0">
         <ion-icon name="log-out-outline" slot="start"></ion-icon>
