--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -23,13 +23,20 @@
     <ion-item class="input-item">
       <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
       <ion-input
+        [type]="mostrarPassword ? 'text' : 'password'"
         label="Contraseña"
         labelPlacement="floating"
         placeholder="Contraseña"
         formControlName="password"
-        type="password"
       ></ion-input>
+      <ion-icon
+        [name]="mostrarPassword ? 'eye-off-outline' : 'eye-outline'"
+        slot="end"
+        (click)="togglePasswordVisibility()"
+        style="cursor: pointer"
+      ></ion-icon>
     </ion-item>
+
     <ion-button
       expand="block"
       class="login-button"
